--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "vitest": "^3.0.5"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "knex": "^3.1.0",
+    "mysql2": "^3.12.0"
+  }
 }
